# tea_ttalps_clone

./: .gitignore  .gitignore_tea  .gitignore_user  CMakeLists.txt  LICENSE  README.md  _config.yml  build.sh  create.py  init.sh  update_tea.sh
.github/: README.md  README_tea.md  README_user.md
apps/LLPNano/: LLPNano_histogrammer.cpp  LLPNano_skimmer.cpp
apps/examples/: condor_runner.py  histogrammer.cpp  plotter.py  skimmer.cpp  submitter.py  ttalps_plotter.py
apps/tests/: core_test.cpp  extensions_test.cpp  histogramming_test.cpp
apps/ttalps_analysis/: ttalps_events_printer.cpp  ttalps_histogrammer.cpp  ttalps_skimmer.cpp  ttalps_skimmer_looseSemileptonic.cpp  ttalps_skimmer_signalLike.cpp  ttalps_skimmer_ttbarLike.cpp
configs/LLPNano/: LLPNano_histogrammer_config.py  LLPNano_plotter_config.py  LLPNano_skimmer_config.py
configs/examples/: histogrammer_config.py  input_file_list.py  minimal_plotter_config.py  plotter_config.py  scale_factors_config.py  skimmer_config.py  trigger_efficiency_histograms.py  ttalps_plotter_config.py
configs/ttalps_analysis/: ttalps_cross_sections.py  ttalps_das_files_list.py  ttalps_events_printer_config.py  ttalps_extra_collections.py  ttalps_histogrammer_config.py  ttalps_histogrammer_default_config.py  ttalps_histogrammer_efficiencies_config.py  ttalps_histogrammer_list.py  ttalps_histogrammer_pileup_config.py  ttalps_histogrammer_trigger_config.py  ttalps_plotter_config.py  ttalps_skimmed_files_list.py  ttalps_skimmer_looseSemileptonic_config.py  ttalps_skimmer_looseSemileptonic_list.py  ttalps_skimmer_looseSemimuonic_config.py  ttalps_skimmer_looseSemimuonic_list.py  ttalps_skimmer_signalLike_config.py  ttalps_skimmer_signalLike_semimuonic_config.py  ttalps_skimmer_ttZLike_config.py  ttalps_skimmer_ttZLike_list.py  ttalps_skimmer_ttZLike_semimuonic_config.py  ttalps_skimmer_ttbarLike_config.py  ttalps_skimmer_ttbarLike_list.py  ttalps_skimmer_ttbarLike_semimuonic_config.py  ttalps_skimmer_ttbarLike_tighter_config.py
data/: muon_highPt_recoID.json
docs/: index.md
libs/core/: CMakeLists.txt
libs/core/include/: Collection.hpp  ConfigManager.hpp  CutFlowManager.hpp  Event.hpp  EventProcessor.hpp  EventReader.hpp  EventWriter.hpp  Helpers.hpp  Logger.hpp  Multitype.hpp  PhysicsObject.hpp  Profiler.hpp  ScaleFactorsManager.hpp
libs/core/src/: ConfigManager.cpp  CutFlowManager.cpp  Event.cpp  EventProcessor.cpp  EventReader.cpp  EventWriter.cpp  PhysicsObject.cpp  ScaleFactorsManager.cpp
libs/extensions/: CMakeLists.txt
libs/extensions/include/: Electron.hpp  EventProcessor.hpp  ExtensionsHelpers.hpp  GenParticle.hpp  HepMCParticle.hpp  HepMCProcessor.hpp  HexaquarksHistogramsFiller.hpp  Jet.hpp  Muon.hpp  NanoEvent.hpp  NanoEventProcessor.hpp  ScaleFactorsManager.hpp  TTAlpsEvent.hpp  TTAlpsHistogramsFiller.hpp  TTAlpsSelections.hpp
libs/extensions/src/: EventProcessor.cpp  GenParticle.cpp  HepMCParticle.cpp  HexaquarksHistogramsFiller.cpp  Jet.cpp  Muon.cpp  NanoEvent.cpp  NanoEventProcessor.cpp  ScaleFactorsManager.cpp  TTAlpsEvent.cpp  TTAlpsHistogramsFiller.cpp  TTAlpsSelections.cpp
libs/histogramming/: CMakeLists.txt
libs/histogramming/include/: HistogramsFiller.hpp  HistogramsHandler.hpp
libs/histogramming/src/: HistogramsFiller.cpp  HistogramsHandler.cpp
libs/user_extensions/: CMakeLists.txt
libs/user_extensions/include/: TTAlpsEvent.hpp  TTAlpsHistogramFiller.hpp  TTAlpsSelections.hpp  UserExtensionsHelpers.hpp
libs/user_extensions/src/: TTAlpsEvent.cpp  TTAlpsHistogramFiller.cpp  TTAlpsSelections.cpp
pylibs/: CMakeLists.txt
pylibs/logger/: Logger.py
pylibs/plotting/: CmsLabelsManager.py  Histogram.py  HistogramNormalizer.py  HistogramPlotter.py  Legend.py  Sample.py  Styler.py  plotter.py
pylibs/scaleFactors/: ScaleFactorsReader.py
pylibs/submitter/: SubmissionManager.py
samples/data/: nanoAOD_example.root
templates/: Event.template.cpp  Event.template.hpp  HistogramFiller.template.cpp  HistogramFiller.template.hpp  HistogramsFiller.template.cpp  HistogramsFiller.template.hpp  PhysicsObject.template.cpp  PhysicsObject.template.hpp  app.template.cpp  condor_config.template.sub  condor_run.template.sh  config.template.py  histogrammer.template.cpp  histogrammer_config.template.py  printer.template.cpp  printer_config.template.py
utils/: calculate_pileup_scale_factors.py  count_files.py  find_missing_files.py  merge_histograms.py
