project(pytea)

file(GLOB_RECURSE PYTHON_MODULES "${CMAKE_SOURCE_DIR}/pylibs/*.py")
file(GLOB_RECURSE PYTHON_SCRIPTS "${CMAKE_SOURCE_DIR}/apps/*.py")
file(GLOB_RECURSE PYTHON_CONFIGS "${CMAKE_SOURCE_DIR}/configs/*.py")

install(FILES ${PYTHON_MODULES} DESTINATION .)
install(FILES ${PYTHON_SCRIPTS} DESTINATION .)
install(FILES ${PYTHON_CONFIGS} DESTINATION .)
